--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+@import "scss/variables";
+@import "~@angular/material/theming";
+@include mat-core();
+
+$cf-primary: mat-palette($mat-custom-primary);
+$cf-accent: mat-palette($mat-custom-accent);
+$cf-warn: mat-palette($mat-custom-warn);
+$cf-theme: mat-light-theme($cf-primary, $cf-accent, $cf-warn);
+
+@include angular-material-theme($cf-theme);
+
+
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
