--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,2 @@
-<mat-toolbar color="primary"></mat-toolbar>
-
 <router-outlet></router-outlet>
+<!--<app-with-navbar-and-sidebar></app-with-navbar-and-sidebar>-->
