--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,85 +1,18 @@
 $mat-custom-primary: (
-  50 : #f6e9e5,
-  100 : #e9c8bf,
-  200 : #dba395,
-  300 : #cd7e6a,
-  400 : #c2634a,
-  500 : #b7472a,
-  600 : #b04025,
-  700 : #a7371f,
-  800 : #9f2f19,
-  900 : #90200f,
-  A100 : #ffc7c1,
-  A200 : #ff9a8e,
-  A400 : #ff6c5b,
-  A700 : #ff5541,
-  contrast: (
-    50 : #000000,
-    100 : #000000,
-    200 : #000000,
-    300 : #000000,
-    400 : #ffffff,
-    500 : #ffffff,
-    600 : #ffffff,
-    700 : #ffffff,
-    800 : #ffffff,
-    900 : #ffffff,
-    A100 : #000000,
-    A200 : #000000,
-    A400 : #000000,
-    A700 : #000000,
-  )
-);
-
-$mat-custom-accent: (
-  50 : #ffe9ed,
-  100 : #ffc7d1,
-  200 : #ffa2b2,
-  300 : #ff7c93,
-  400 : #ff607c,
-  500 : #ff4465,
-  600 : #ff3e5d,
-  700 : #ff3553,
-  800 : #ff2d49,
-  900 : #ff1f37,
+  50 : #fff3e4,
+  100 : #ffe0bb,
+  200 : #ffcb8e,
+  300 : #ffb661,
+  400 : #ffa73f,
+  500 : #ff971d,
+  600 : #ff8f1a,
+  700 : #ff8415,
+  800 : #ff7a11,
+  900 : #ff690a,
   A100 : #ffffff,
-  A200 : #ffffff,
-  A400 : #ffced3,
-  A700 : #ffb5bc,
-  contrast: (
-    50 : #000000,
-    100 : #000000,
-    200 : #000000,
-    300 : #000000,
-    400 : #000000,
-    500 : #ffffff,
-    600 : #ffffff,
-    700 : #ffffff,
-    800 : #ffffff,
-    900 : #ffffff,
-    A100 : #000000,
-    A200 : #000000,
-    A400 : #000000,
-    A700 : #000000,
-  )
-);
-
-
-$mat-custom-warn: (
-  50 : #f7f7f7,
-  100 : #eaeaea,
-  200 : #dddddd,
-  300 : #cfcfcf,
-  400 : #c4c4c4,
-  500 : #bababa,
-  600 : #b3b3b3,
-  700 : #ababab,
-  800 : #a3a3a3,
-  900 : #949494,
-  A100 : #ffffff,
-  A200 : #ffffff,
-  A400 : #ffcccc,
-  A700 : #ffb3b3,
+  A200 : #fff8f5,
+  A400 : #ffd7c2,
+  A700 : #ffc6a8,
   contrast: (
     50 : #000000,
     100 : #000000,
@@ -91,6 +24,73 @@ $mat-custom-warn: (
     700 : #000000,
     800 : #000000,
     900 : #000000,
+    A100 : #000000,
+    A200 : #000000,
+    A400 : #000000,
+    A700 : #000000,
+  )
+);
+
+$mat-custom-accent: (
+  50 : #ffffff,
+  100 : #ffffff,
+  200 : #ffffff,
+  300 : #ffffff,
+  400 : #ffffff,
+  500 : #ffffff,
+  600 : #ffffff,
+  700 : #ffffff,
+  800 : #ffffff,
+  900 : #ffffff,
+  A100 : #ffffff,
+  A200 : #ffffff,
+  A400 : #ffffff,
+  A700 : #ffffff,
+  contrast: (
+    50 : #000000,
+    100 : #000000,
+    200 : #000000,
+    300 : #000000,
+    400 : #000000,
+    500 : #000000,
+    600 : #000000,
+    700 : #000000,
+    800 : #000000,
+    900 : #000000,
+    A100 : #000000,
+    A200 : #000000,
+    A400 : #000000,
+    A700 : #000000,
+  )
+);
+
+
+$mat-custom-warn: (
+  50 : #ffeae4,
+  100 : #ffcbbb,
+  200 : #ffa88e,
+  300 : #ff8561,
+  400 : #ff6a3f,
+  500 : #ff501d,
+  600 : #ff491a,
+  700 : #ff4015,
+  800 : #ff3711,
+  900 : #ff270a,
+  A100 : #ffffff,
+  A200 : #fff6f5,
+  A400 : #ffc7c2,
+  A700 : #ffb0a8,
+  contrast: (
+    50 : #000000,
+    100 : #000000,
+    200 : #000000,
+    300 : #000000,
+    400 : #000000,
+    500 : #ffffff,
+    600 : #ffffff,
+    700 : #ffffff,
+    800 : #ffffff,
+    900 : #ffffff,
     A100 : #000000,
     A200 : #000000,
     A400 : #000000,
