--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,5 +18,5 @@ html, body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
-  background-color: mat-color($cf-primary);
+  //background-color: mat-color($cf-primary);
 }
