--- a/src/app/public-can-fund/home/home.component.scss
+++ b/src/app/public-can-fund/home/home.component.scss
@@ -8,3 +8,14 @@
   font-size: 22px;
   color: #e2dce2;
 }
+
+
+.bg-img {
+  background-image: url(/assets/images/bgTest.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  //min-height: calc(100vh - 60px);
+  height: 100vh;
+  width: 100vw;
+}
