--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,29 +1,29 @@
 $mat-custom-primary: (
-  50 : #fff3e4,
-  100 : #ffe0bb,
-  200 : #ffcb8e,
-  300 : #ffb661,
-  400 : #ffa73f,
-  500 : #ff971d,
-  600 : #ff8f1a,
-  700 : #ff8415,
-  800 : #ff7a11,
-  900 : #ff690a,
-  A100 : #ffffff,
-  A200 : #fff8f5,
-  A400 : #ffd7c2,
-  A700 : #ffc6a8,
+  50 : #fae7e9,
+  100 : #f3c2c8,
+  200 : #eb9aa3,
+  300 : #e2717e,
+  400 : #dc5263,
+  500 : #d63447,
+  600 : #d12f40,
+  700 : #cc2737,
+  800 : #c6212f,
+  900 : #bc1520,
+  A100 : #ffedee,
+  A200 : #ffbabe,
+  A400 : #ff878e,
+  A700 : #ff6e75,
   contrast: (
     50 : #000000,
     100 : #000000,
     200 : #000000,
     300 : #000000,
-    400 : #000000,
-    500 : #000000,
-    600 : #000000,
-    700 : #000000,
-    800 : #000000,
-    900 : #000000,
+    400 : #ffffff,
+    500 : #ffffff,
+    600 : #ffffff,
+    700 : #ffffff,
+    800 : #ffffff,
+    900 : #ffffff,
     A100 : #000000,
     A200 : #000000,
     A400 : #000000,
@@ -32,20 +32,20 @@ $mat-custom-primary: (
 );
 
 $mat-custom-accent: (
-  50 : #ffffff,
-  100 : #ffffff,
-  200 : #ffffff,
-  300 : #ffffff,
-  400 : #ffffff,
-  500 : #ffffff,
-  600 : #ffffff,
-  700 : #ffffff,
-  800 : #ffffff,
-  900 : #ffffff,
-  A100 : #ffffff,
-  A200 : #ffffff,
-  A400 : #ffffff,
-  A700 : #ffffff,
+  50 : #e0f7fb,
+  100 : #b3ebf5,
+  200 : #80ddef,
+  300 : #4dcfe9,
+  400 : #26c5e4,
+  500 : #00bbdf,
+  600 : #00b5db,
+  700 : #00acd7,
+  800 : #00a4d2,
+  900 : #0096ca,
+  A100 : #f2fbff,
+  A200 : #bfecff,
+  A400 : #8cddff,
+  A700 : #73d5ff,
   contrast: (
     50 : #000000,
     100 : #000000,
@@ -54,9 +54,9 @@ $mat-custom-accent: (
     400 : #000000,
     500 : #000000,
     600 : #000000,
-    700 : #000000,
-    800 : #000000,
-    900 : #000000,
+    700 : #ffffff,
+    800 : #ffffff,
+    900 : #ffffff,
     A100 : #000000,
     A200 : #000000,
     A400 : #000000,
