--- a/src/app/public-can-fund/home/home.component.scss
+++ b/src/app/public-can-fund/home/home.component.scss
@@ -1,3 +1,5 @@
+@import "~@angular/material/theming";
+
 .text-title {
   font-size: 40px;
   color: white;
@@ -18,4 +20,38 @@
   //min-height: calc(100vh - 60px);
   height: 100vh;
   width: 100vw;
+}
+
+.displayed-container {
+  width: 1000px;
+  margin: 5rem 5rem 5rem 5rem;
+  padding: 5rem;
+  //background-color: black;
+  //opacity: 0.5;
+  border-radius: 6px;
+}
+
+.text-header-web {
+  font-size: 70px;
+  white-space: pre-wrap;
+  line-height: 60px;
+  color: white;
+  //text-shadow: 2px 2px 2px gray;
+}
+
+.social-icon {
+  opacity: 1 !important;
+  @include mat-elevation(8);
+  border-radius: 50%;
+  padding: 6px;
+  width: 80px;
+  background-color: white;
+  //transition: 3s;
+}
+
+.social-icon:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+  opacity: 0.8;
+  transition: 0.5s;
 }
