--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -14,18 +14,61 @@
     </button>
     <input type="text" fxFlex formControlName="keyword" placeholder="Search in CanFund">
   </form>
-<!--  <div routerLink="/">-->
-<!--    CanFund-->
-<!--  </div>-->
   <span fxFlex></span>
   <div *ngIf="!isLoginUser; else login">
-    <a mat-stroked-button routerLink="/login">
+    <a mat-stroked-button routerLink="/home">
       <mat-icon>account_circle</mat-icon>
       Login
     </a>
     <button mat-button>Sign up</button>
   </div>
   <ng-template #login>
-    <button mat-button>{{userData.displayName}}</button>
+    <button mat-stroked-button [matMenuTriggerFor]="userMenu">
+      <img id="profile-img" [src]="userData.photoURL" [alt]="userData.displayName">
+      &nbsp;
+      {{userData.displayName}}
+    </button>
+    <button mat-icon-button>
+      <mat-icon>help</mat-icon>
+    </button>
   </ng-template>
 </div>
+
+
+<mat-menu #userMenu="matMenu">
+  <button mat-menu-item [matMenuTriggerFor]="myIdeaMenu">
+    <mat-icon>grade</mat-icon>
+    <span>My Idea</span>
+  </button>
+  <button mat-menu-item>
+    <mat-icon matBadge="2" matBadgePosition="above after" matBadgeColor="primary" matBadgeSize="small">favorite</mat-icon>
+    <span>Likes</span>
+  </button>
+  <button mat-menu-item>
+    <mat-icon matBadge="22" matBadgePosition="above after" matBadgeColor="primary" matBadgeSize="small">person_add</mat-icon>
+    <span>Following</span>
+  </button>
+  <button mat-menu-item>
+    <mat-icon>settings</mat-icon>
+    <span>Settings</span>
+  </button>
+  <button mat-menu-item>
+    <mat-icon>help</mat-icon>
+    <span>Help</span>
+  </button>
+  <button mat-menu-item (click)="onLogout()">
+    <mat-icon>exit_to_app</mat-icon>
+    <span>Logout</span>
+  </button>
+</mat-menu>
+
+<mat-menu #myIdeaMenu="matMenu">
+  <button mat-menu-item>
+    <mat-icon matBadge="8" matBadgePosition="above after" matBadgeColor="primary" matBadgeSize="small">favorite</mat-icon>
+    <span>MyIdea</span>
+  </button>
+  <button mat-menu-item>
+    <mat-icon>add_circle</mat-icon>
+    <span>Share new idea</span>
+  </button>
+</mat-menu>
