--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,8 +4,8 @@
 @include mat-core();
 
 $cf-primary: mat-palette($mat-custom-primary);
-$cf-accent: mat-palette($mat-blue-gray);
-$cf-warn: mat-palette($mat-red);
+$cf-accent: mat-palette($mat-custom-accent);
+$cf-warn: mat-palette($mat-gray);
 $cf-theme: mat-light-theme($cf-primary, $cf-accent, $cf-warn);
 
 @include angular-material-theme($cf-theme);
@@ -18,5 +18,4 @@ html, body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
-  //background-color: mat-color($cf-primary);
 }
