--- a/src/app/public-can-fund/public-can-fund.component.html
+++ b/src/app/public-can-fund/public-can-fund.component.html
@@ -1,2 +1,4 @@
-<!--<app-navbar></app-navbar>-->
-<router-outlet></router-outlet>
+<app-navbar></app-navbar>
+<div class="bg-img" fxLayout="column">
+  <router-outlet></router-outlet>
+</div>
