--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,38 +1,80 @@
-<div class="custom-toolbar" fxLayout="row" fxLayoutAlign="start center">
-  <a mat-button routerLink="/">Icon CanFund</a>
-  &nbsp;
-  <button mat-button>Explore</button>
-  <button mat-button>Share Idea!</button>
-  <form [formGroup]="searchGroup"
-        (ngSubmit)="onSearch()"
-        class="custom-search"
-        fxFlex="20%"
-        fxLayout="row"
-        fxLayoutAlign="start center">
-    <button mat-icon-button type="submit">
-      <mat-icon>search</mat-icon>
-    </button>
-    <input type="text" fxFlex formControlName="keyword" placeholder="Search in CanFund">
-  </form>
-  <span fxFlex></span>
-  <div *ngIf="!isLoginUser; else login">
-    <a mat-stroked-button routerLink="/home">
-      <mat-icon>account_circle</mat-icon>
-      Login
-    </a>
-    <button mat-button>Sign up</button>
-  </div>
-  <ng-template #login>
-    <button mat-stroked-button [matMenuTriggerFor]="userMenu">
-      <img id="profile-img" [src]="userData.photoURL" [alt]="userData.displayName">
-      &nbsp;
-      {{userData.displayName}}
-    </button>
-    <button mat-icon-button>
-      <mat-icon>help</mat-icon>
-    </button>
-  </ng-template>
-</div>
+<mat-toolbar color="primary">
+  <mat-toolbar-row>
+    <a mat-button routerLink="/">Icon CanFund</a>
+    &nbsp;
+    <button mat-button>Explore</button>
+    <button mat-button>Share Idea!</button>
+    <form [formGroup]="searchGroup"
+          (ngSubmit)="onSearch()"
+          class="custom-search"
+          fxFlex="20%"
+          fxLayout="row"
+          fxLayoutAlign="start center">
+      <button mat-icon-button type="submit">
+        <mat-icon>search</mat-icon>
+      </button>
+      <input type="text" fxFlex formControlName="keyword" placeholder="Search in CanFund">
+    </form>
+    <span fxFlex></span>
+    <div *ngIf="!isLoginUser; else login">
+      <a mat-raised-button
+         color="primary"
+         routerLink="/login">
+        <mat-icon>account_circle</mat-icon>
+        Login
+      </a>
+      <a mat-button routerLink="/sign-up">Sign up</a>
+    </div>
+    <ng-template #login>
+      <button mat-stroked-button [matMenuTriggerFor]="userMenu">
+        <img id="profile-img" [src]="userData.photoURL" [alt]="userData.displayName">
+        &nbsp;
+        {{userData.displayName}}
+      </button>
+      <button mat-icon-button>
+        <mat-icon>help</mat-icon>
+      </button>
+    </ng-template>
+  </mat-toolbar-row>
+</mat-toolbar>
+
+<!--<div class="custom-toolbar" fxLayout="row" fxLayoutAlign="start center">-->
+<!--  <a mat-button routerLink="/">Icon CanFund</a>-->
+<!--  &nbsp;-->
+<!--  <button mat-button>Explore</button>-->
+<!--  <button mat-button>Share Idea!</button>-->
+<!--  <form [formGroup]="searchGroup"-->
+<!--        (ngSubmit)="onSearch()"-->
+<!--        class="custom-search"-->
+<!--        fxFlex="20%"-->
+<!--        fxLayout="row"-->
+<!--        fxLayoutAlign="start center">-->
+<!--    <button mat-icon-button type="submit">-->
+<!--      <mat-icon>search</mat-icon>-->
+<!--    </button>-->
+<!--    <input type="text" fxFlex formControlName="keyword" placeholder="Search in CanFund">-->
+<!--  </form>-->
+<!--  <span fxFlex></span>-->
+<!--  <div *ngIf="!isLoginUser; else login">-->
+<!--    <a mat-raised-button-->
+<!--       color="primary"-->
+<!--       routerLink="/login">-->
+<!--      <mat-icon>account_circle</mat-icon>-->
+<!--      Login-->
+<!--    </a>-->
+<!--    <a mat-button routerLink="/sign-up">Sign up</a>-->
+<!--  </div>-->
+<!--  <ng-template #login>-->
+<!--    <button mat-stroked-button [matMenuTriggerFor]="userMenu">-->
+<!--      <img id="profile-img" [src]="userData.photoURL" [alt]="userData.displayName">-->
+<!--      &nbsp;-->
+<!--      {{userData.displayName}}-->
+<!--    </button>-->
+<!--    <button mat-icon-button>-->
+<!--      <mat-icon>help</mat-icon>-->
+<!--    </button>-->
+<!--  </ng-template>-->
+<!--</div>-->
 
 
 <mat-menu #userMenu="matMenu">
