hook api with ui login and sign up, create share-idea component

--- a/src/app/public-can-fund/home/login/login.component.html
+++ b/src/app/public-can-fund/home/login/login.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="row">
+<div fxLayout="row" style="min-height: calc(100vh - 63.99px)" fxLayoutAlign="center center">
     <div class="displayed-container" fxLayout="column" fxLayoutGap="2rem" fxFlex="60">
       <div class="text-header-web">
         "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
@@ -53,7 +53,7 @@
           <mat-divider></mat-divider>
           <!--    <mat-card-actions>-->
           <div class="sign-up-route" fxLayout="row" fxLayoutAlign="center center">
-            <div>New to CanFund? <span><a href="#">Sign up</a></span></div>
+            <div>New to CanFund? <span><a routerLink="/sign-up">Sign up</a></span></div>
           </div>
           <!--    </mat-card-actions>-->
           <mat-divider></mat-divider>
