--- a/src/app/public-can-fund/home/login/login.component.scss
+++ b/src/app/public-can-fund/home/login/login.component.scss
@@ -21,10 +21,11 @@
 }
 
 .text-header-web {
-  font-size: 70px;
+  //width: 600px;
+  font-size: 50px;
   white-space: pre-wrap;
   line-height: 60px;
-  color: white;
+  color: #636363;
   //text-shadow: 2px 2px 2px gray;
 }
 
