--- a/src/app/public-can-fund/public-can-fund.component.html
+++ b/src/app/public-can-fund/public-can-fund.component.html
@@ -1,4 +1,6 @@
 <app-navbar></app-navbar>
-<div class="bg-img" fxLayout="column">
+<div class="bg-img"
+     [ngClass]="{'have-bg-img': isHaveBg === true}"
+     fxLayout="column">
   <router-outlet></router-outlet>
 </div>
