--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -33,7 +33,7 @@
   width: 180px;
   border-radius: 3px;
   background-color: white;
-  opacity: 0.9;
+  //opacity: 0.9;
 }
 
 .custom-search > input {
