--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -3,7 +3,7 @@
     <a mat-button routerLink="/">Icon CanFund</a>
     &nbsp;
     <button mat-button>Explore</button>
-    <button mat-button>Share Idea!</button>
+    <a mat-button routerLink="/share">Share Idea!</a>
     <form [formGroup]="searchGroup"
           (ngSubmit)="onSearch()"
           class="custom-search"
@@ -17,13 +17,12 @@
     </form>
     <span fxFlex></span>
     <div *ngIf="!isLoginUser; else login">
-      <a mat-raised-button
-         color="primary"
+      <a mat-button
          routerLink="/login">
         <mat-icon>account_circle</mat-icon>
         Login
       </a>
-      <a mat-button routerLink="/sign-up">Sign up</a>
+<!--      <a mat-button routerLink="/sign-up">Sign up</a>-->
     </div>
     <ng-template #login>
       <button mat-stroked-button [matMenuTriggerFor]="userMenu">
@@ -31,10 +30,10 @@
         &nbsp;
         {{userData.displayName}}
       </button>
-      <button mat-icon-button>
-        <mat-icon>help</mat-icon>
-      </button>
     </ng-template>
+    <button mat-icon-button>
+      <mat-icon>help</mat-icon>
+    </button>
   </mat-toolbar-row>
 </mat-toolbar>
 
