add write user api in login and signup page

--- a/src/app/public-can-fund/home/home.component.html
+++ b/src/app/public-can-fund/home/home.component.html
@@ -1,1 +1,10 @@
 <p>dashboard</p>
+
+
+<div fxLayout="column" style="width: 500px;">
+  <button mat-raised-button color="primary" fxFlex="100%">top button</button>
+  <div fxLayout="row" fxFlex="100%">
+    <button mat-stroked-button color="primary" fxFlex="50%">first button</button>
+    <button mat-stroked-button color="warn" fxFlex="50%">second button</button>
+  </div>
+</div>
