--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -14,6 +14,7 @@
       </button>
       <input type="text" formControlName="keyword" placeholder="Search in CanFund">
     </form>
+    <a routerLink="/mock-add" mat-button>mock add</a>
     <span fxFlex></span>
     <div *ngIf="!isLoginUser; else login">
       <a mat-button
@@ -31,7 +32,7 @@
         {{userData.displayName}}
       </button>
     </ng-template>
-    <button mat-icon-button>
+    <button mat-icon-button matTooltip="Help!">
       <mat-icon>help</mat-icon>
     </button>
   </mat-toolbar-row>
