--- a/src/app/shared/components/idea-card/idea-card.component.scss
+++ b/src/app/shared/components/idea-card/idea-card.component.scss
@@ -1,5 +1,12 @@
+@import "~@angular/material/theming";
+
 mat-card {
   width: 380px;
+  .cover-img {
+    object-fit: cover;
+    width: 100%;
+    height: 200px;
+  }
 }
 
 .header-idea {
@@ -9,9 +16,6 @@ mat-card {
 .description-idea {
   font-size: 12px;
   color: gray;
-  //.more {
-  //  display: none;
-  //}
   .read-more-btn {
     color: #00a4d2;
   }
@@ -35,37 +39,48 @@ mat-card {
     cursor: pointer;
     text-decoration: underline;
   }
+  .display-like > .like-counter {
+    font-size: 12px;
+    color: #00a4d2;
+  }
 }
 
 .cover-container {
-  //font-size: 12px;
   .btn-action-group {
     transform: scale(0.75);
     position: absolute;
-    top: -18px;
-    right: -10px;
+    top: 0;
+    right: 0;
     visibility: hidden;
+  }
+  .display-owner {
+    padding: 0 1rem;
+    width: 100%;
+    visibility: hidden;
+    position: absolute;
+    left: 0;
+    bottom: 10px;
+    .img {
+      margin: 6px;
+      border-radius: 50%;
+      max-width: 30px;
+      @include mat-elevation(3);
+    }
   }
   &:hover {
     .btn-action-group {
       visibility: visible;
     }
+    .display-owner {
+      visibility: visible;
+    }
+    button:hover {
+      transition: 0.3s;
+      transform: scale(1.08);
+    }
   }
 }
-
-button:hover {
-  transition: 0.3s;
-  transform: scale(1.1);
-}
-
 .cover-container:hover {
   filter: brightness(90%);
 }
 
-.location-text {
-  text-overflow: "...";
-  width: 100px;
-  //text-overflow: ellipsis;
-  overflow: hidden;
-  white-space: nowrap;
-}
