--- a/src/app/public-can-fund/dashboard/dashboard.component.html
+++ b/src/app/public-can-fund/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
   <mat-divider></mat-divider>
 
   <div class="container" fxLayout="column" fxLayoutGap="2rem">
-    <div class="found-idea-text">We found 41,554 ideas for you!</div>
+    <div class="found-idea-text">We found {{ideasCounter}} ideas for you!</div>
     <div *ngFor="let tag of tagList" fxLayout="column" fxLayoutGap="2rem">
       <app-idea-group [tagData]="tag"></app-idea-group>
       <mat-divider></mat-divider>
