--- a/src/app/public-can-fund/for-test/for-test.component.html
+++ b/src/app/public-can-fund/for-test/for-test.component.html
@@ -1,9 +1,14 @@
-<mat-tab-group  mat-align-tabs="center">
-  <mat-tab label="First">
-    <div fxLayout="row" fxFlex fxLayoutAlign="center center">
-      some center content
-    </div>
-  </mat-tab>
-  <mat-tab label="Second"> Content 2 </mat-tab>
-  <mat-tab label="Third"> Content 3 </mat-tab>
-</mat-tab-group>
+<!--<mat-tab-group  mat-align-tabs="center">-->
+<!--  <mat-tab label="First">-->
+<!--    <div fxLayout="row" fxFlex fxLayoutAlign="center center">-->
+<!--      some center content-->
+<!--    </div>-->
+<!--  </mat-tab>-->
+<!--  <mat-tab label="Second"> Content 2 </mat-tab>-->
+<!--  <mat-tab label="Third"> Content 3 </mat-tab>-->
+<!--</mat-tab-group>-->
+
+
+<div fxFlexFill fxLayout="row" fxLayoutAlign="center center">
+  <p class="loading"></p>
+</div>
