move mock detail to idea-detail component

--- a/src/app/public-can-fund/share-idea/share-idea.component.scss
+++ b/src/app/public-can-fund/share-idea/share-idea.component.scss
@@ -1,8 +1,7 @@
-p {
-  line-height: 3;
+.title-create {
+  padding: 1rem 0;
 }
 
-.example-header-image {
-  background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
-  background-size: cover;
+.create-container {
+  margin: 0 20rem;
 }
