--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -94,4 +94,8 @@
     <mat-icon>add_circle</mat-icon>
     <span>Test UI</span>
   </a>
+  <a mat-menu-item routerLink="/idea">
+    <mat-icon>add_circle</mat-icon>
+    <span>Mock idea detail</span>
+  </a>
 </mat-menu>
