--- a/src/app/public-can-fund/share-idea/share-idea.component.html
+++ b/src/app/public-can-fund/share-idea/share-idea.component.html
@@ -1,104 +1,77 @@
-<div fxFlex="100" >
-  <div fxLayout="column" fxLayoutAlign="space-around center" style="margin-top: 50px">
-    <h1>Lorem Ipsum คืออะไร?</h1>
-    <p>Lorem Ipsum คือ เนื้อหาจำลองแบบเรียบๆ ที่ใช้กันในธุรกิจงานพิมพ์หรืองานเรียงพิมพ์ มันได้กลายมาเป็นเนื้อหาจำลองมาตรฐานของธุรกิจดังกล่าวมาตั้งแต่ศตวรรษที่ 16</p>
+<div fxLayout="column"
+     fxLayoutGap="3rem"
+     style="margin: 1rem 0"
+>
+  <div class="title-create" fxLayout="column" fxLayoutAlign="center center">
+    <h2>Start with the basics</h2>
+    <p>Make it easy for people to learn about your project.</p>
   </div>
-  <div fxLayout="row" fxLayoutAlign="center center" style="margin-top: 25px">
-    <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu" style="width: 550px; height: 400px">
-    <div style="width: 400px; height: 400px">
-      <div fxLayout="column" fxFill fxLayoutAlign="space-between none" fxFlex="100" style="padding-left: 35px; padding-right: 35px">
-        <mat-progress-bar mode="buffer" value="68"></mat-progress-bar>
-        <h1 style="color: #d63447; margin-bottom: 10px">US$ 600,000</h1>
-        <p>pledged of <span style="color: #d63447">US$ 25,000 goal</span></p>
-        <div>
-          <b style="font-size: x-large;">5,312</b>
-          <p>backers</p>
-        </div>
-        <div>
-          <b style="font-size: x-large;">12</b>
-          <p>hours to go</p>
-        </div>
-        <div style="width: 100%; height: 35px; margin-bottom: 10px">
-          <button mat-flat-button color="primary" fxFlex="100">Back this project</button>
-        </div>
+  <mat-divider></mat-divider>
+  <div fxLayout="row" fxFlex="100" class="create-container">
+    <div fxLayout="column" fxFlex="50%">
+      <div class="header">Project name</div>
+      <div class="sub-header">Write a clear, brief title that helps people quickly understand the gist of your project.</div>
+    </div>
+    <div fxLayout="column" fxFlex="50%">right</div>
+  </div>
+  <mat-divider></mat-divider>
+  <div fxLayout="row" fxFlex="100" class="create-container">
+    <div fxLayout="column" fxFlex="50%">
+      <div class="header">Project category</div>
+      <div class="sub-header">
+        Choose the category that most closely aligns with your project.
 
-        <div fxLayout="row" fxLayoutAlign="space-between center" style="width: 100%; height: 35px">
-          <button fxFlex="45" mat-stroked-button>Remind me</button>
-          <div fxFlex="45" fxLayout="row" fxLayoutAlign="end center">
-            <img class="social-icon" src="./assets/images/facebook.png" style="height: 22px; width: 22px; margin-right: 15px">
-            <img class="social-icon" src="./assets/images/twitter.png" style="height: 22px; width: 22px; margin-right: 15px">
-            <img class="social-icon" src="./assets/images/tumblr.png" style="height: 22px; width: 22px; margin-right: 15px">
-          </div>
-        </div>
-        <div>
-          <p style="font-size: x-small; line-height: 1.5"><a href="www.google.com">All or nothing.</a> This project will only be funded if it reaches its goal by Fri, March 20 2020 5:00 AM UTC +07:00.</p>
-        </div>
+        Think of where backers may look to find it. Reach a more specific community by also choosing a subcategory.
+
+        You’ll be able to change the category and subcategory even after your project is live.
       </div>
     </div>
+    <div fxLayout="column" fxFlex="50%">right</div>
   </div>
-  <mat-divider style="margin-top: 30px"></mat-divider>
-  <div fxLayout="row" fxLayoutAlign="center center" >
-    <mat-tab-group fxFill mat-align-tabs="center" >
-      <mat-tab label="Campaign">
-        <div style="padding: 25px 25% 20px;">
-          <h2><strong>Story</strong></h2>
-          <p>เมื่อเครื่องพิมพ์โนเนมเครื่องหนึ่งนำรางตัวพิมพ์มาสลับสับตำแหน่งตัวอักษรเพื่อทำหนังสือตัวอย่าง Lorem Ipsum อยู่ยงคงกระพันมาไม่ใช่แค่เพียงห้าศตวรรษ แต่อยู่มาจนถึงยุคที่พลิกโฉมเข้าสู่งานเรียงพิมพ์ด้วยวิธีทางอิเล็กทรอนิกส์ และยังคงสภาพเดิมไว้อย่างไม่มีการเปลี่ยนแปลง มันได้รับความนิยมมากขึ้นในยุค ค.ศ. 1960 เมื่อแผ่น Letraset วางจำหน่ายโดยมีข้อความบนนั้นเป็น Lorem Ipsum และล่าสุดกว่านั้น คือเมื่อซอฟท์แวร์การทำสื่อสิ่งพิมพ์ (Desktop Publishing) อย่าง Aldus PageMaker ได้รวมเอา Lorem Ipsum เวอร์ชั่นต่างๆ เข้าไว้ในซอฟท์แวร์ด้วย</p>
-          <br>
-          <h3><strong>ตรงกันข้ามกับความเชื่อที่นิยมกัน Lorem Ipsum ไม่ได้เป็นเพียงแค่ชุดตัวอักษรที่สุ่มขึ้นมามั่วๆ</strong></h3>
-          <p>แต่หากมีที่มาจากวรรณกรรมละตินคลาสสิกชิ้นหนึ่งในยุค 45 ปีก่อนคริสตศักราช ทำให้มันมีอายุถึงกว่า 2000 ปีเลยทีเดียว ริชาร์ด แมคคลินท็อค ศาสตราจารย์ชาวละติน จากวิทยาลัยแฮมพ์เด็น-ซิดนีย์ ในรัฐเวอร์จิเนียร์ นำคำภาษาละตินคำว่า consectetur ซึ่งหาคำแปลไม่ได้จาก Lorem Ipsum ตอนหนึ่งมาค้นเพิ่มเติม โดยตรวจเทียบกับแหล่งอ้างอิงต่างๆ ในวรรณกรรมคลาสสิก และค้นพบแหล่งข้อมูลที่ไร้ข้อกังขาว่า Lorem Ipsum นั้นมาจากตอนที่ 1.10.32 และ 1.10.33 ของเรื่อง "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) ของ ซิเซโร ที่แต่งไว้เมื่อ 45 ปีก่อนคริสตศักราช หนังสือเล่มนี้เป็นเรื่องราวที่ว่าด้วยทฤษฎีแห่งจริยศาสตร์ ซึ่งเป็นที่นิยมมากในยุคเรเนสซองส์ บรรทัดแรกของ Lorem Ipsum "Lorem ipsum dolor sit amet.." ก็มาจากบรรทัดหนึ่งในตอนที่ 1.10.32 นั่นเอง</p>
-          <br>
-          <p>ด้านล่างของหน้านี้คือท่อนมาตรฐานของ Lorem Ipsum ที่ใช้กันมาตั้งแต่คริสตศตวรรษที่ 16ที่ได้รับการสร้างขึ้นใหม่สำหรับผู้ที่สนใจ ประกอบไปด้วย ตอนที่ 1.10.32 และ 1.10.33 จากเรื่อง "de Finibus Bonorum et Malorum" โดยซิเซโร ก็ได้รับการผลิตขึ้นใหม่ด้วยเช่นกันในรูปแบบที่ตรงกับต้นฉบับ ตามมาด้วยเวอร์ชั่นภาษาอังกฤษจากการแปลของ เอช แร็คแคม เมื่อปี ค.ศ. 1914</p>
-          <br>
-          <img src="../../../assets/images/bgTest.jpg" height="500" width="100%">
-
-        </div>
-      </mat-tab>
-      <mat-tab label="Updates">
-        <div style="padding: 25px 30% 20px;">
-           <mat-card>
-             <h3>UPDATE #1</h3>
-             <h1>ทำไมจึงต้องนำมาใช้?</h1>
-             <img src="https://cdn.pixabay.com/photo/2017/08/10/05/18/home-2618511_960_720.jpg" width="100%" height="400"/>
-             <p>มีหลักฐานที่เป็นข้อเท็จจริงยืนยันมานานแล้ว ว่าเนื้อหาที่อ่านรู้เรื่องนั้นจะไปกวนสมาธิของคนอ่านให้เขวไปจากส่วนที้เป็น Layout เรานำ Lorem Ipsum มาใช้เพราะความที่มันมีการกระจายของตัวอักษรธรรมดาๆ แบบพอประมาณ ซึ่งเอามาใช้แทนการเขียนว่า ‘ตรงนี้เป็นเนื้อหา, ตรงนี้เป็นเนื้อหา' ได้ และยังทำให้มองดูเหมือนกับภาษาอังกฤษที่อ่านได้ปกติ ปัจจุบันมีแพ็กเกจของซอฟท์แวร์การทำสื่อสิ่งพิมพ์ และซอฟท์แวร์การสร้างเว็บเพจ (Web Page Editor) หลายตัวที่ใช้ Lorem Ipsum เป็นแบบจำลองเนื้อหาที่เป็นค่าตั้งต้น และเวลาที่เสิร์ชด้วยคำว่า 'lorem ipsum' ผลการเสิร์ชที่ได้ก็จะไม่พบบรรดาเว็บไซต์ที่ยังคงอยู่ในช่วงเริ่มสร้างด้วย โดยหลายปีที่ผ่านมาก็มีการคิดค้นเวอร์ชั่นต่างๆ ของ Lorem Ipsum ขึ้นมาใช้ บ้างก็เป็นความบังเอิญ บ้างก็เป็นความตั้งใจ (เช่น การแอบแทรกมุกตลก)</p>
-           </mat-card>
-        </div>
-      </mat-tab>
-      <mat-tab label="Comments">
-        <div style="padding: 25px 35% 20px;">
-          <div style="background-color: #FAFAFA; padding: 10px; border-width: 1px">
-            <mat-card style="margin-bottom: 20px">
-              <mat-card-header>
-                <div mat-card-avatar class="example-header-image"></div>
-                <mat-card-title>Shiba Inu</mat-card-title>
-                <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-              </mat-card-header>
-              <mat-card-content>
-                <p style="line-height: 2">
-                  The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-                  A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-                  bred for hunting. <br> Thanks for good products
-                </p>
-              </mat-card-content>
-            </mat-card>
-
-            <mat-card>
-              <mat-card-header>
-                <div mat-card-avatar class="example-header-image"></div>
-                <mat-card-title>Shiba Inu</mat-card-title>
-                <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-              </mat-card-header>
-              <mat-card-content>
-                <p style="line-height: 2">
-                  The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-                  A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-                  bred for hunting.
-                </p>
-              </mat-card-content>
-            </mat-card>
-          </div>
-        </div>
-      </mat-tab>
-    </mat-tab-group>
-    <div style="margin-top: 200px"></div>
+  <mat-divider></mat-divider>
+  <div fxLayout="row" fxFlex="100" class="create-container">
+    <div fxLayout="column" fxFlex="50%">
+      <div class="header">Project location</div>
+      <div class="sub-header">Enter the location that best describes where your project is based.</div>
+    </div>
+    <div fxLayout="column" fxFlex="50%">right</div>
+  </div>
+  <mat-divider></mat-divider>
+  <div fxLayout="row" fxFlex="100" class="create-container">
+    <div fxLayout="column" fxFlex="50%">
+      <div class="header">Project image</div>
+      <div class="sub-header">
+        Add an image that clearly represents your project.
+        Choose one that looks good at different sizes. It will appear in different sizes in different places: on your project page,
+        across the Kickstarter website and mobile apps, and (when shared) on social channels.</div>
+    </div>
+    <div fxLayout="column" fxFlex="50%">right</div>
+  </div>
+  <mat-divider></mat-divider>
+  <div fxLayout="row" fxFlex="100" class="create-container">
+    <div fxLayout="column" fxFlex="50%">
+      <div class="header">Funding goal</div>
+      <div class="sub-header">Funding is all-or-nothing. If you don’t meet your goal, you won’t receive any money.</div>
+    </div>
+    <div fxLayout="column" fxFlex="50%">right</div>
+  </div>
+  <mat-divider></mat-divider>
+  <div fxLayout="row" fxFlex="100" class="create-container">
+    <div fxLayout="column" fxFlex="50%">
+      <div class="header">Launch date</div>
+      <div class="sub-header">Enter a date when you plan to launch—you can always return to this after you’ve built out more of your Kickstarter project page.</div>
+    </div>
+    <div fxLayout="column" fxFlex="50%">right</div>
+  </div>
+  <mat-divider></mat-divider>
+  <div fxLayout="row" fxFlex="100" class="create-container">
+    <div fxLayout="column" fxFlex="50%">
+      <div class="header">Campaign duration</div>
+      <div class="sub-header">Set a time limit for your campaign. You won’t be able to change this after you launch.</div>
+    </div>
+    <div fxLayout="column" fxFlex="50%">right</div>
+  </div>
+  <div fxLayout="row" fxFlex="100" fxLayoutAlign="end center" class="create-container">
+    <button mat-raised-button color="primary" fxFlex="20">Save</button>
   </div>
 </div>
